# Momentrace

./: .gitignore  README.md  THIRD_PARTY_LICENSES.md  index.html  package-lock.json  package.json  vite.config.ts  widget.html
src/: main.tsx  styles.css  widget.css  widget.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_icon.rs  lib.rs  main.rs  store.rs  tracker.rs
